...
                        modifier = Modifier.fillMaxWidth(),
                    ) { Text(text = "Reset Graph Layout") }
                    DividerG()
                    Button(
                        onClick = { showAlgoButtons.value = !showAlgoButtons.value },
                        modifier = Modifier.fillMaxWidth(),
                    ) { Text("Algorithms") }
                    AlgoButton(viewModel, showAlgoButtons, showResult)
                    DividerG()
                    Spacer(modifier = Modifier.padding(4.dp))
                }
            }

...
